--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS de Bootstrap -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+
     <title>Document</title>
 </head>
 <body>
-    <p>voila c'est dla merde en barre ces cours</p>
+    <p>MERDEUX</p>
 
+    
 
         <!-- En bas du <body> -->
             <script src="./dist/bundle.js"></script>
+            <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
 
